# QPgAdmin

./: .gitignore  CMakeLists.txt  resource.qrc
src/: main.cpp  mainwindow.cpp  mainwindow.h  querythread.cpp  querythread.h  sqlhighlighter.cpp  sqlhighlighter.h
src/dialogs/: connectiondialog.cpp  connectiondialog.h
src/widgets/: databasetree.cpp  databasetree.h  edittablewidget.cpp  edittablewidget.h  sqlquerywidget.cpp  sqlquerywidget.h
